Fix spacing of hero section in mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -952,6 +952,7 @@ ul {
   .hero-inner {
     grid-template-columns: 1fr;
     text-align: center;
+    margin-top: 100px;
   }
   .hero-text {
     max-width: 100%;
